session and token

--- a/app/view/register.ejs
+++ b/app/view/register.ejs
@@ -1,6 +1,6 @@
 <h2>Register</h2>
 <form 
- action="/api/v1/register" method="post">
+ action="/register" method="post">
     <% if(messages.error){ %>
         <span style="color:red">
             <%= messages.error %>
