--- a/app/view/login.ejs
+++ b/app/view/login.ejs
@@ -1,5 +1,11 @@
 <h2>Login</h2>
-<from>
+<form action="/login" method="post">
+    <% if(messages.error){ %>
+        <span style="color:red">
+            <%= messages.error %>
+        </span>
+    <% } %>
+    <div>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
     </div>
