+ reset password (- send by email)

--- a/app/view/login.ejs
+++ b/app/view/login.ejs
@@ -16,4 +16,15 @@
     <div>
         <input type="submit" value="Login">
     </div>
+    <div> 
+        <a href="/forgetPassword"> Lupa Password? </a>
+    </div>
 </form>
+<!-- <script src="/socket.io/socket.io.js" charset="utf-8"></script>
+<script type="text/javascript">
+    var io = io()
+    io.on('notification', function(data) {
+        console.log(data)
+        alert(data)
+    })
+</script> -->
